# customer-care-dashboard

./: package.json  pyproject.toml  requirements.txt
backend/: settings.py
src/: App.css  App.tsx  index.css
