[tool.poetry]
name = "customer-care-dashboard"
version = "0.1.0"
description = "customer care dashboard app for Enterprise Clients"
authors = ["Mikah Feldman-Stein <mikah.feldmanstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
djangorestframework = "^3.11.1"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
pylint = "<2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
